[project]
name = "ad688-sp25-lab01"
version = "0.0.1"
description = "Lab 1 for  AD688"
authors = [
    {name = "Mishal Aboobackar Manalody",email = "231106438+mishalaboobackar@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
